# phira-web-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
monitor/: Cargo.toml
monitor-client/: Cargo.toml
monitor-client/src/: audio.rs  chart_player.rs  engine.rs  game_monitor.rs  lib.rs  monitor.rs  network.rs  particles.rs  renderer.rs  shaders.rs  time.rs
monitor-client/src/engine/: chart.rs  judge.rs  line.rs  note.rs  particle.rs  resource.rs
monitor-client/src/game_monitor/: game_scene.rs
monitor-client/src/renderer/: batch.rs  context.rs  particle.rs  shader.rs  text.rs  texture.rs
monitor-client/src/renderer/shaders/: particles.glsl
monitor-common/: Cargo.toml
monitor-common/src/: anim.rs  bpm.rs  chart.rs  core.rs  lib.rs  live.rs  object.rs  rpe.rs  tween.rs
monitor-common/src/core/: anim.rs  audio.rs  chart.rs  color.rs  object.rs  texture.rs  tween.rs
monitor-proxy/: Cargo.toml
monitor-proxy/migration/: Cargo.toml
monitor-proxy/migration/src/: m20220101_000001_create_table.rs
monitor-proxy/src/: auth.rs  chart.rs  config.rs  dtos.rs  entity.rs  error.rs  handlers.rs  live.rs  main.rs  parse.rs  rooms.rs  router.rs  services.rs  utils.rs
monitor-proxy/src/auth/: session.rs
monitor-proxy/src/chart/: cache.rs  parse.rs  process.rs  test_chart.rs
monitor-proxy/src/chart/parse/: extra.rs  pbc.rs  rpe.rs
monitor-proxy/src/dtos/: auth_dto.rs  room_dto.rs  visited_dto.rs
monitor-proxy/src/entity/: visited_user.rs
monitor-proxy/src/handlers/: auth_handler.rs  chart_handler.rs  live_handler.rs  room_handler.rs
monitor-proxy/src/live/: client.rs
monitor-proxy/src/middlewares/: auth_middleware.rs
monitor-proxy/src/parse/: extra.rs  pbc.rs  pec.rs  pgr.rs  rpe.rs
monitor-proxy/src/rooms/: client.rs
monitor-proxy/src/services/: auth_service.rs  chart_service.rs  live_service.rs  room_service.rs
monitor-proxy/src/utils/: cache.rs  client.rs  parse.rs  task.rs
monitor-proxy/src/utils/parse/: pbc.rs  pec.rs  pgr.rs  rpe.rs
monitor/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: main.rs
web/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts  router.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.ts  zh-CN.ts
web/src/views/: MonitorView.vue  PlayView.vue  PlayerView.vue
