[package]
name = "monitor-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
monitor-common = { path = "../monitor-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
nalgebra = "0.32"
anyhow = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"

# WASM Bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "WebGlVertexArrayObject",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "BaseAudioContext",
    "GainNode",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Performance",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "ImageBitmap",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
]}
serde-wasm-bindgen = "0.6.5"
phira-mp-common = { path = "../../phira-mp/phira-mp-common", default-features = false }
