[package]
name = "monitor-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_yaml = "0.9"
nalgebra = "0.32"
half = "2.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
image = { version = "0.24", default-features = false, features = ["png"] }

# 工具
anyhow = "1.0"
log = "0.4"
