[package]
name = "monitor-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
nalgebra = "0.32"
half = "2.0"
anyhow = "1.0"
log = "0.4"
image = "0.25.9"
zip = "7.4.0"
serde_bytes = "0.11.19"
bincode = "1.3"
symphonia = "0.5.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
