[package]
name = "monitor-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
nalgebra = "0.32"
half = "2.0"
anyhow = "1.0"
log = "0.4"
image = { version = "0.25.9", default-features = false }
serde_bytes = "0.11.19"
bincode = "1.3"
symphonia = { version = "=0.5.4", features = ["mp3", "ogg", "vorbis", "wav", "pcm"] }
chrono = { version = "0.4.43", features = ["serde"] }
phira-mp-common = { path = "../../phira-mp/phira-mp-common", default-features = false }
phira-mp-macros = { path = "../../phira-mp/phira-mp-macros" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
