[package]
name = "monitor-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["cookie-private"]}
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
monitor-common = { path = "../monitor-common" }
image = "0.25.9"
bincode = "1.3"
byteorder = "1.5"
ordered-float = "3.4"
zip = "7.4.0"
mime_guess = "2.0.5"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
time = "0.3.47"

phira-mp-common = { path = "../../phira-mp/phira-mp-common" }
