[package]
name = "monitor-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
phira-mp-common = { git = "https://github.com/HyperSynapseNetwork/phira-mp" }
monitor-common = { path = "../monitor-common" }
migration = { path = "./migration" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tokio-tungstenite = "0.21"
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
image = "0.25.9"
bincode = "1.3"
byteorder = "1.5"
ordered-float = "3.4"
zip = "8.1"
mime_guess = "2.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
time = "0.3"
futures = "0.3"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
fs4 = { version = "0.13", features = ["tokio"] }
tempfile = "3.27"
pin-project = "1.1"
bytes = "1.11"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
